Fix header image on mobile

--- a/css/cayman.css
+++ b/css/cayman.css
@@ -144,7 +144,7 @@ a:hover { text-decoration: underline; }
 @media screen and (max-width: 42em) { .btn { display: block; width: 100%; padding: 0.75rem; font-size: 0.9rem; }
   .btn + .btn { margin-top: 1rem; margin-left: 0; } }
 
-.page-header { color: #fff; text-align: center; background-color: #283256; background: url(../assets/misty-mobile.jpg) no-repeat center; }
+.page-header { color: #fff; text-align: center; background-color: #283256; background: url(../assets/misty-mobile.jpg) no-repeat bottom; }
 @media (min-width: 450px) { .page-header { background: url(../assets/misty.jpg) no-repeat center; } }
 .page-header a { color: #fff; }
 @media screen and (min-width: 64em) { .page-header { padding: 5rem 6rem; } }
